knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Visa__c/Visa__c.object-meta.xml
<CustomObject>
    <label>Visa</label>
    <nameField>
        <displayFormat>Visa-{0000}</displayFormat>
        <label>Visa Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>