knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Visa__c/fields/Clinician__c.field-meta.xml
<CustomField>
    <fullName>Clinician__c</fullName>
    <label>Clinician</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visa</relationshipLabel>
    <relationshipName>Visas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>