knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Visa__c/fields/Copy_Info__c.field-meta.xml
<CustomField>
    <fullName>Copy_Info__c</fullName>
    <label>Copy Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Need Copy</fullName>
            </value>
            <value>
                <fullName>Copy Received</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>