knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Visa__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Birth Abroad Cert</fullName>
            </value>
            <value>
                <fullName>Citizen/Naturalized</fullName>
            </value>
            <value>
                <fullName>E-2</fullName>
            </value>
            <value>
                <fullName>EAD</fullName>
            </value>
            <value>
                <fullName>H-1B</fullName>
            </value>
            <value>
                <fullName>H-2B</fullName>
            </value>
            <value>
                <fullName>H-3B</fullName>
            </value>
            <value>
                <fullName>H-1C</fullName>
            </value>
            <value>
                <fullName>J-1</fullName>
            </value>
            <value>
                <fullName>J-2</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>O-1</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>Perm (Green Card)</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>TN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>